# jupyter-sidekick

./: .gitignore  LICENSE  README.md  install.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.yarn/patches/: license-webpack-plugin-npm-2.3.21-74008160a2.patch
docs/: architecture.md  design-decisions.md  index.md  install.md  myst.yml  personas-as-skills.md
jupyter-config/jupyter_server_config.d/: jupyter_acp.json  jupyterlab_acp.json
jupyter_acp/: acp_registry.py  extension.py  handlers.py  manager.py
jupyter_sidekick/: __init__.py
jupyterlab_acp/: __init__.py  acp_client.py  acp_registry.py  binding.py  chat_index.py  extension.py  handlers.py  harness.py  manager.py  registry.py  serialize.py  state.py
src/: api.ts  index.ts  server.ts  stream.ts  types.ts  widget.tsx
src/jupyter_acp/: __init__.py  acp_client.py  binding.py  extension.py  handlers.py  harness.py  manager.py  registry.py  serialize.py  state.py
style/: base.css
tests/: fake_agent.py  test_acp_client.py  test_acp_registry.py  test_binding.py  test_capabilities.py  test_chat_index.py  test_extension.py  test_handlers.py  test_harness_session.py  test_manager.py  test_permission.py  test_registry.py  test_serialize.py  test_state.py
validation/: step0_notebook_reflection.py
