[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-acp"
version = "0.0.1"
description = "Jupyter-native access to coding agents over the Agent Client Protocol (ACP): per-chat single-agent binding."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors = [{ name = "Carl Boettiger", email = "cboettig@berkeley.edu" }]
keywords = ["jupyter", "jupyterlab", "acp", "agent-client-protocol", "ai"]
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "agent-client-protocol>=0.9,<0.10",
  "jupyter-server>=2.4,<3",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/SchmidtDSE/jupyterlab-acp"
Issues = "https://github.com/SchmidtDSE/jupyterlab-acp/issues"

[project.entry-points."jupyter_server.extension_points"]
jupyterlab_acp = "jupyterlab_acp"

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_acp"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d/jupyterlab_acp.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_acp.json"
# The built labextension dir already contains install.json, so it ships via the
# mapping below — no separate install.json entry (that would duplicate it).
"jupyterlab_acp/labextension" = "share/jupyter/labextensions/jupyterlab-acp"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyterlab_acp/labextension/static/style.js",
  "jupyterlab_acp/labextension/package.json",
]
skip-if-exists = ["jupyterlab_acp/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
# Dev build for now: build:prod trips a bug in the old license-webpack-plugin
# pinned by @jupyterlab/builder. The dev bundle is functional (unminified).
build_cmd = "build"
npm = ["jlpm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
